# volume_renderer_vtk

./: .gitignore  CMakeLists.txt  interfaceDll.cpp  interfaceDll.h  loadVolume.cpp  loadVolume.h  main.cpp  stdafx.h
colors/: OSIRIX_HI_CONTRAST.vvt
delphi/: MyOpenGlPanel.pas  MyOpenglContext.pas  Project1.dof  Project1.dpr  UColorFunctions.pas  UColorPoint.pas  UGradientPoint.pas  USendColorToDll.pas  Unit1.dfm  Unit1.pas  color_transfer_functions.rc  color_transfer_functions.res
delphi/colors/: CT-AAA.vvt  CT-Bone-1500-300.vvt  CT-Muscle.vvt
